Project

General

Profile

Actions

Bug #22821

closed

mds: session reference leak

Added by Zheng Yan about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

there are several places get session by:

"Session *session = static_cast<Session *>(m->get_connection()->get_priv());"

but does forget to put reference


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #22969: luminous: mds: session reference leakResolvedPrashant DActions
Copied to CephFS - Backport #22970: jewel: mds: session reference leakResolvedNathan CutlerActions
Actions #1

Updated by Zheng Yan about 6 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Patrick Donnelly about 6 years ago

  • Subject changed from session reference leak to mds: session reference leak
  • Assignee set to Zheng Yan
  • Backport set to luminous,jewel
Actions #3

Updated by Patrick Donnelly about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler about 6 years ago

Actions #5

Updated by Nathan Cutler about 6 years ago

Actions #6

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF